# iNOU

./: .gitignore  README.md  app.py  pyproject.toml
src/inou/face/: embedder.py  model.py  processor.py
