[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iNOU"
version = "0.1.0"
description = "Face ID app built with Streamlit"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "streamlit-webrtc",
    "opencv-python-headless",
    "av",
    "facenet-pytorch",
    "torch"
]

[tool.setuptools]
packages = ["inou"]
package-dir = {"" = "src"}